# gift

./: gift-metadata-test.tar.bz2  network.diff
FastTrack/src-old/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.msvc  Makefile.sniff  Makefile.sniff~  PROTOCOL~  crypt-test.tar.bz2  fst_download.c  fst_download.h  fst_download.lo  fst_fasttrack.c  fst_fasttrack.h  fst_fasttrack.lo  fst_hash.c  fst_hash.h  fst_hash.lo  fst_http.c  fst_http.h  fst_http.lo  fst_http_client.c  fst_http_client.h  fst_http_header.c  fst_ipset.c  fst_meta.c  fst_meta.h  fst_meta.lo  fst_node.c  fst_node.h  fst_node.lo  fst_packet.c  fst_packet.h  fst_packet.lo  fst_push.c  fst_push.h  fst_search.c  fst_search.h  fst_search.lo  fst_session.c  (+21 more)
Gnutella/: .#Make.msvc.1.10  .cvsignore  AUTHORS  ChangeLog  ChangeLog.~1.32.~  Make.msvc  Make.msvc.~1.10.~  Makefile  Makefile.am  Makefile.in  Makefile.msvc  README  TODO  aclocal.m4  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.~1.37.~  gift-gnutella-0.0.10.1.tar.bz2  gift-gnutella-0.0.10.2.tar.bz2  gift-gnutella-0.0.11.tar.bz2  gnutella.spec  libtool
Gnutella.wrking/: ChangeLog  Make.msvc  Makefile  Makefile.am  Makefile.in  Makefile.msvc  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in~  config.status  configure  configure.ac  g.diff  gift-gnutella-0.0.10.tar.bz2  gnutella.spec  gnutella.spec.in  libtool
Gnutella.wrking/CVS/: Entries
Gnutella.wrking/autom4te.cache/: output.0  requests  traces.0
Gnutella.wrking/data/: Gnutella.conf  Makefile  Makefile.in  gwebcaches
Gnutella.wrking/m4/: Makefile  gift-pkgconfig.m4  openbsd.m4  zlib.m4
Gnutella.wrking/src/: .#file_cache.c.1.11  .#gt_http_server.c.1.70  Makefile  Makefile.in  dns.lo  file_cache.c  file_cache.lo  gt_accept.c  gt_accept.h  gt_accept.lo  gt_ban.lo  gt_bind.lo  gt_conf.h  gt_conf.lo  gt_connect.c  gt_connect.lo  gt_gnutella.c  gt_gnutella.h  gt_gnutella.lo  gt_guid.c  gt_guid.lo  gt_http_client.c  gt_http_client.h  gt_http_client.lo  gt_http_server.c  gt_http_server.lo  gt_netorg.c  gt_netorg.lo  gt_node.c  gt_node.h  gt_node.lo  gt_node_cache.h  gt_node_cache.lo  gt_node_list.lo  gt_packet.c  gt_packet.h  gt_packet.lo  gt_protocol.lo  gt_query_route.lo  gt_search.c  (+39 more)
Gnutella/CVS/: Entries  Repository
Gnutella/autom4te.cache/: output.0  traces.0
Gnutella/data/: .cvsignore  Gnutella.conf.template  Makefile  Makefile.am  gwebcaches  gwebcaches.pl  hostiles.txt
Gnutella/m4/: .cvsignore  (+5 more)
OpenFT-local/: .#ChangeLog.1.45  .#configure.ac.1.25  AUTHORS  BUGS  ChangeLog.~1.49.~  Make.msvc  Makefile  Makefile.am  Makefile.msvc  autogen.sh  config.cache  config.h  config.status  configure  configure.ac  configure.ac.~1.27.~  libtool  openft.spec  stream.diff
giFT-0.0.9-hacked/: .#configure.ac  .cvsignore  Make.msvc  Makefile  Makefile.am  Makefile.in  TODO  aa  aa~  aclocal.m4  bench.diff_  config.cache  config.h  config.h.in  config.status  configure  configure.ac  ft_search_exec.diff  gconfdefs.h  giFT-setup  libtool
giFT-FastTrack/: .#PROTOCOL.1.13  .#PROTOCOL.1.14  .#PROTOCOL.1.16  .#PROTOCOL.1.17  .#PROTOCOL.1.3  .#PROTOCOL.1.6  .#PROTOCOL.1.7  .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  PROTOCOL  README.win32  aclocal.m4  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  fasttrack.spec  fasttrack.spec.in  libtool
giFT-OpenNap/: AUTHORS  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  libtool
giFT-SoulSeek/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  libtool
giFT.old/: .#giFT-setup.1.25  .#giFT-setup.1.26  .#giFT-setup.1.30  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  cvslog  diff  giFT-setup  giFT-setup.in  gift.spec  gift.spec.in  libtool  make-tags.sh  tags
giFT.oldish/: .#configure.ac.1.70  .#configure.ac.1.72  ChangeLog  Make.msvc  Makefile  Makefile.am  Makefile.in  Makefile.mingw32  OpenFT.conf.5  aclocal.m4  autogen.macosx.sh  autogen.mingw.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  giFT-setup  giFT.1  gift.conf.5  gift.spec  html-meta.diff  html-meta.diff~  libtool  ogg-meta.diff
giFT.working/: #configure.ac#  #diff#  .#diff  AUTHORS  ChangeLog  HACKING  Make.msvc  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  conf.diff  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  confpath.diff  confpath.diff~  diff  dl.diff  gconfdefs.h  giFT-setup  gift-setup  gift-setup.in  gift.spec  gift.spec.in  giftconfig.h  giftd.1  gmon.out  http_start.diff  image.diff  interface.diff  libtool  log.diff  share.diff  (+3 more)
giFTcurs/: .cvsignore  INSTALL.cygwin  Makefile  Makefile.am  Makefile.in  Makefile~  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  autogen.sh.~1.13.~  config.cache  config.h  config.h.in  config.status  configure  configure.in  convert-to-savannah  giFTcurs.1  giFTcurs.conf.5
giFTcurs-0.6.2/: AUTHORS  ChangeLog  INSTALL  INSTALL.ms  Makefile  Makefile.am  Makefile.in  NEWS  README  README.ms  TODO  TODO.ms  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  giFTcurs.1  giFTcurs.conf.5  giftcurs.tmac  network.diff
giFTcurs-working/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.in~  Makefile~  NEWS  README  THANKS  TODO  acconfig.h  acinclude.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  giFTcurs.1  giFTcurs.conf.5  giFTcurs.xpm
giftoxic/: .#configure.in.1.4  AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  giFToxic.spec  giFToxic.spec.in
(+7576 files in other folders)
