# $Id: Makefile.am,v 1.2 2003/12/24 17:00:49 flexo_ Exp $

SUBDIRS = m4 src

#EXTRA_DIST=gift_soulseek.lsm.in gift_soulseek.spec.in gift_soulseek.texinfo

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
#info_TEXINFOS = gift_soulseek.texinfo
#gift_soulseek_TEXINFOS = gpl.texinfo

#  install the man pages
#man_MANS=gift_soulseek.1
